# bevy_test

./: Cargo.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
assets/: Skeleton.glb  Steve.glb
firedbg/: target.json
src/: asset_loader.rs  camera.rs  character.rs  debug.rs  enemy.rs  environment.rs  main.rs  movable.rs  player.rs  states.rs
